third_party/WebKit/Source/WebKit2/WebProcess/WebCoreSupport/WebGraphicsLayer.h
@@ -36,6 +36,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebLayerTreeInfo.h"
 #include "WebProcess.h"
 #include <WebCore/RunLoop.h>
+#include <wtf/text/StringHash.h>
 
 #if USE(ACCELERATED_COMPOSITING)
 
@@ -153,6 +154,10 @@ private:
     bool m_inUpdateMode : 2;
 
     void notifyChange();
+    void notifyChangeRecursively();
+    HashSet<String> m_transformAnimations;
+
+    bool selfOrAncestorHasActiveTransformAnimations() const;
 
 #if USE(TILED_BACKING_STORE)
     void computeTransformedVisibleRect();
